ministr-tui/tests/snapshots/snapshot__meter_glide_start.snap
---
source: ministr-tui/tests/snapshot.rs
expression: "render_at(&mut app, 120, 36, t0)"
---
"  ministr                                                                                             engine ● running  "
"  ╭──────────────────────╮                                                                    ╭──────────────────────╮  "
"  │ cohaero              │                                                                    │ engine               │  "
"  │                      │                                                                    │ ● running            │  "
"  │                      │                                                                    │ version 0.7.0        │  "
"  │                      │                                                                    │ 1 project            │  "
"  │                      │                                                                    ╰──────────────────────╯  "
"  │                      │                                                                                              "
"  │                      │                                                                                              "
"  │                      │                                                                                              "
"  │                      │                                                                                              "
"  │                      │                                                                                              "
"  │                      │                                                                                              "
"  │                      │                                                                                              "
"  │                      │                                                                                              "
"  │                      │                                                                                              "
"  │                      │                                                                                              "
"  │                      │                                                                                              "
"  │                      │                                                                                              "
"  │                      │                                                                                              "
"  │                      │                                                                                              "
"  │                      │                                                                                              "
"  │                      │                                                                                              "
"  │                      │                                                                                              "
"  │                      │                                                                                              "
"  │                      │                                                                                              "
"  │                      │                                                                                              "
"  │                      │                                                                                              "
"  │                      │                                                                                              "
"  │                      │                                                                                              "
"  │                      │                                                                                              "
"  │ ████                 │                                                                                              "
"  │ updating 20%         │                                                                                              "
"  │ 1204 files           │                                                                                              "
"  ╰──────────────────────╯                                                                                              "
"  ← → select   q quit                                                                                                   "
