ministr-tui/tests/snapshots/snapshot__patch_in_panel_narrow.snap
---
source: ministr-tui/tests/snapshot.rs
expression: "render(&mut app, 60, 20)"
---
"  ministr                                 engine ● running  "
"  ministr                            up to date  812 files  "
"  cohaero            █████▏       updating 43%  1204 files  "
"  tock                             needs update  640 files  "
"                                                            "
"  ╭──────────────────────────────────────────────────────╮  "
"  │ add a project                                        │  "
"  │                                                      │  "
"  │ /Users/alrik/Code/newproject                         │  "
"  │                                                      │  "
"  │ the engine reads every file under this path and      │  "
"  │ keeps the project up to date                         │  "
"  │                                                      │  "
"  ╰──────────────────────────────────────────────────────╯  "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"  enter add   esc cancel                                    "
