ministr-tui/tests/snapshots/snapshot__patch_in_panel_spacious.snap
---
source: ministr-tui/tests/snapshot.rs
expression: "render(&mut app, 120, 36)"
---
"  ministr                                                                                             engine ● running  "
"  ╭──────────────────────╮  ╭──────────────────────╮  ╭──────────────────────╮                ╭──────────────────────╮  "
"  │ ministr              │  │ cohaero              │  │ tock                 │                │ engine               │  "
"  │                      │  │                      │  │                      │                │ ● running            │  "
"  │                      │  │                      │  │                      │                │ version 0.7.0        │  "
"  │                      │  │                      │  │                      │                │ 3 projects           │  "
"  │                      │  │                      │  │                      │                ╰──────────────────────╯  "
"  │                      │  │                      │  │                      │                                          "
"  │                      │  │                      │  │                      │                                          "
"  │                      │  │                      │  │                      │                                          "
"  │                      │  │                      │  │                      │                                          "
"  │                      │  │                      │  │                      │                                          "
"  │                      │  │                      │  │                      │                                          "
"  │                      │  ╭──────────────────────────────────────────────────────────────╮                            "
"  │                      │  │ add a project                                                │                            "
"  │                      │  │                                                              │                            "
"  │                      │  │ /Users/alrik/Code/newproject                                 │                            "
"  │                      │  │                                                              │                            "
"  │                      │  │ the engine reads every file under this path and keeps the    │                            "
"  │                      │  │ project up to date                                           │                            "
"  │                      │  │                                                              │                            "
"  │                      │  ╰──────────────────────────────────────────────────────────────╯                            "
"  │                      │  │                      │  │                      │                                          "
"  │                      │  │                      │  │                      │                                          "
"  │                      │  │                      │  │                      │                                          "
"  │                      │  │                      │  │                      │                                          "
"  │                      │  │                      │  │                      │                                          "
"  │                      │  │                      │  │                      │                                          "
"  │                      │  │                      │  │                      │                                          "
"  │                      │  │                      │  │                      │                                          "
"  │                      │  │                      │  │                      │                                          "
"  │                      │  │ ████████▋            │  │                      │                                          "
"  │ up to date           │  │ updating 43%         │  │ needs update         │                                          "
"  │ 812 files            │  │ 1204 files           │  │ 640 files            │                                          "
"  ╰──────────────────────╯  ╰──────────────────────╯  ╰──────────────────────╯                                          "
"  enter add   esc cancel                                                                                                "
