ministr-tui/tests/snapshots/snapshot__scaffold_frame_starting_narrow.snap
---
source: ministr-tui/tests/snapshot.rs
expression: "render(&app, 60, 20)"
---
"  ministr                               engine ○ starting…  "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"  q quit                                                    "
